[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jeff Moore", email = "jeffreymm@protonmail.com" }]
requires-python = ">=3.13"
dependencies = ["crawl4ai>=0.6.3", "mcp[cli]>=1.10.1"]

[project.scripts]
crawl4ai-mcp = "crawl4ai_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
