[project]
name = "crawl4ai-mcp"
description = "Crawl4AI MCP server for AI-powered web crawling."
readme = "README.md"
authors = [{ name = "Jeff Moore", email = "jeffreymm@protonmail.com" }]
requires-python = ">=3.13"
dependencies = ["crawl4ai>=0.6.3", "mcp[cli]>=1.10.1"]
dynamic = ["version"]

[project.scripts]
crawl4ai-mcp = "crawl4ai_mcp.main:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true


[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.0", "pytest-cov>=6.2.1"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=project_context"

[[tool.mypy.overrides]]
module = ["crawl4ai", "crawl4ai.models", "crawl4ai.types"]
ignore_missing_imports = true
